--- a/app/src/main/res/layout/picture_layout.xml
+++ b/app/src/main/res/layout/picture_layout.xml
@@ -10,6 +10,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:src="@mipmap/ic_launcher"/>
 
 </LinearLayout>
