--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#5694f7</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#5694f7</color>
+    <color name="colorYellow">#FECC00</color>
+    <color name="colorAppBar">#016AA7</color>
 </resources>
