--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -20,7 +20,7 @@
                     tools:showIn="@layout/activity_main">
 
         <LinearLayout
-                android:id="@+id/picturesLogin"
+                android:id="@+id/pictures"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
