--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -102,6 +102,23 @@
                     android:textColor="#fff"
                     android:text="@string/flickr_pictures_download"/>
 
+            <Button
+                    android:id="@+id/buttonPixabayImagesDownload"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="4dp"
+                    android:gravity="center"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="12dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginRight="4dp"
+                    android:background="#000"
+                    android:textColor="#fff"
+                    android:text="@string/pixabay_pictures_download"/>
+
             <LinearLayout
                     android:id="@+id/pictures"
                     android:layout_width="match_parent"
