--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -26,64 +26,17 @@
                 android:orientation="vertical">
 
             <TextView
+                    android:id="@+id/noInternetConnection"
+                    android:gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
-                    android:text="@string/hello"
-                    android:textSize="20dp"/>
-
-            <TextView
-                    android:id="@+id/nameAndSurname"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:text="@string/my_friend"
-                    android:textSize="22dp"
-                    android:textStyle="bold"/>
-
-            <ImageView
-                    android:id="@+id/profileImage"
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:src="@mipmap/ic_launcher"/>
-
-            <Button
-                    android:id="@+id/buttonLogoutFacebook"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="4dp"
-                    android:gravity="center"
-                    android:paddingTop="12dp"
-                    android:paddingBottom="12dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_marginRight="4dp"
-                    android:background="@color/com_facebook_blue"
-                    android:textColor="#fff"
-                    android:text="@string/facebook_logout"/>
-
-            <Button
-                    android:id="@+id/buttonFacebookImagesDownload"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="4dp"
-                    android:gravity="center"
-                    android:paddingTop="12dp"
-                    android:paddingBottom="12dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_marginRight="4dp"
-                    android:background="@color/com_facebook_blue"
-                    android:textColor="#fff"
-                    android:text="@string/facebook_pictures_download"/>
+                    android:textColor="@color/colorAppBar"
+                    android:textSize="44dp"
+                    android:textStyle="bold"
+                    android:text="@string/turn_on_internet"
+                    android:visibility="gone"/>
 
             <Button
                     android:id="@+id/buttonFlickrImagesDownload"
@@ -98,9 +51,9 @@
                     android:layout_marginStart="4dp"
                     android:layout_marginEnd="4dp"
                     android:layout_marginRight="4dp"
-                    android:background="#000"
+                    android:background="@color/colorAppBar"
                     android:textColor="#fff"
-                    android:text="@string/flickr_pictures_download"/>
+                    android:text="@string/flickr_images_download"/>
 
             <Button
                     android:id="@+id/buttonPixabayImagesDownload"
@@ -115,9 +68,9 @@
                     android:layout_marginStart="4dp"
                     android:layout_marginEnd="4dp"
                     android:layout_marginRight="4dp"
-                    android:background="#000"
+                    android:background="@color/colorAppBar"
                     android:textColor="#fff"
-                    android:text="@string/pixabay_pictures_download"/>
+                    android:text="@string/pixabay_images_download"/>
 
             <LinearLayout
                     android:id="@+id/pictures"
