--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,6 +28,6 @@
 
     </RelativeLayout>
 
-    <include layout="@layout/content_login" android:id="@+id/include"/>
+    <!--<include layout="@layout/content_login" android:id="@+id/include"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
