--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,33 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:background="@color/colorYellow"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorYellow"
         android:fitsSystemWindows="true"
         tools:context=".LoginActivity">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                    xmlns:tools="http://schemas.android.com/tools"
-                    android:id="@+id/content_main"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                    tools:context="org.testintegration.MainActivity"
-                    tools:showIn="@layout/activity_main">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <TextView
+                android:id="@+id/noInternetConnection"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:text="@string/app_desc"
+                android:textColor="@color/colorPrimary"
+                android:textSize="44dp"
+                android:textStyle="bold" />
 
         <ImageView
                 android:id="@+id/logoImage"
                 android:layout_width="400dp"
                 android:layout_height="400dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp"
-                android:src="@mipmap/ic_launcher"/>
+                android:layout_marginTop="80dp"
+                android:src="@mipmap/ic_launcher" />
 
     </RelativeLayout>
-
-    <!--<include layout="@layout/content_login" android:id="@+id/include"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
