--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,6 @@
             android:layout_height="match_parent">
 
         <TextView
-                android:id="@+id/noInternetConnection"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -28,8 +27,8 @@
                 android:layout_width="400dp"
                 android:layout_height="400dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="80dp"
-                android:src="@mipmap/ic_launcher" />
+                android:layout_marginTop="100dp"
+                android:src="@mipmap/ic_launcher_round" />
 
     </RelativeLayout>
 
