--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:background="@color/colorYellow"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorYellow"
         android:fitsSystemWindows="true"
         tools:context=".MainActivity">
 
-    <include layout="@layout/content_main"/>
+    <include layout="@layout/content_main" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
