--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -31,8 +31,8 @@
                 android:gravity="center"
                 android:paddingTop="12dp"
                 android:paddingBottom="12dp"
-                android:text="@string/flickr_images_download"
-                android:textColor="#fff" />
+                android:text="@string/download_from_flickr"
+                android:textColor="@color/colorWhite" />
 
         <Button
                 android:id="@+id/buttonPixabayImagesDownload"
@@ -49,8 +49,8 @@
                 android:gravity="center"
                 android:paddingTop="12dp"
                 android:paddingBottom="12dp"
-                android:text="@string/pixabay_images_download"
-                android:textColor="#fff" />
+                android:text="@string/download_from_pixabay"
+                android:textColor="@color/colorWhite" />
 
         <GridView
                 android:id="@+id/gridView"
