--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#5694f7</color>
     <color name="colorYellow">#FECC00</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
