--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -8,7 +8,7 @@
         android:fitsSystemWindows="true"
         tools:context=".ImageActivity">
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/content_image"
             android:layout_width="match_parent"
@@ -18,123 +18,70 @@
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingBottom="@dimen/activity_vertical_margin">
 
-        <LinearLayout
+        <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-            <TextView
-                    android:id="@+id/imageNewName"
-                    android:layout_width="@dimen/edited_image_size"
-                    android:layout_height="@dimen/edited_image_size"
-                    android:visibility="gone" />
-
-            <ImageView
-                    android:id="@+id/imageNew"
-                    android:layout_width="@dimen/edited_image_size"
-                    android:layout_height="@dimen/edited_image_size"
-                    android:layout_gravity="center_horizontal"
-                    android:visibility="gone"
-                    app:srcCompat="@mipmap/ic_launcher" />
-
-            <ImageView
-                    android:id="@+id/imageOriginal"
-                    android:layout_width="@dimen/edited_image_size"
-                    android:layout_height="@dimen/edited_image_size"
-                    android:layout_gravity="center_horizontal"
-                    app:srcCompat="@mipmap/ic_launcher" />
-
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:text="@string/choice_frame"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="44dp"
-                    android:textStyle="bold" />
-
-            <RadioGroup
-                    android:id="@+id/radioFrame"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                <RadioButton
-                        android:id="@+id/buttonFrameDarkBrown"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/frame_dark_brown"
-                        android:textColor="@color/colorPrimary" />
-
-                <RadioButton
-                        android:id="@+id/buttonFrameGolden"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/frame_golden"
-                        android:textColor="@color/colorPrimary" />
-
-                <RadioButton
-                        android:id="@+id/buttonFrameLightBrown"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/frame_light_brown"
-                        android:textColor="@color/colorPrimary" />
-
-                <RadioButton
-                        android:id="@+id/buttonFrameSilver"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/frame_silver"
-                        android:textColor="@color/colorPrimary" />
-
-                <RadioButton
-                        android:id="@+id/buttonFrameWhite"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/frame_white"
-                        android:textColor="@color/colorPrimary" />
-
-            </RadioGroup>
-
-            <Button
-                    android:id="@+id/buttonAddFrame"
+            <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="4dp"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_marginRight="4dp"
-                    android:background="@color/colorPrimary"
-                    android:gravity="center"
-                    android:paddingTop="12dp"
-                    android:paddingBottom="12dp"
-                    android:text="@string/add_frame"
-                    android:textColor="@color/colorWhite" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-            <Button
-                    android:id="@+id/buttonShare"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="4dp"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_marginRight="4dp"
-                    android:background="@color/colorPrimary"
-                    android:gravity="center"
-                    android:paddingTop="12dp"
-                    android:paddingBottom="12dp"
-                    android:text="@string/share"
-                    android:textColor="@color/colorWhite" />
+                <Button
+                        android:id="@+id/buttonShare"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="4dp"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginLeft="4dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginEnd="4dp"
+                        android:layout_marginRight="4dp"
+                        android:background="@color/colorPrimary"
+                        android:gravity="center"
+                        android:paddingTop="12dp"
+                        android:paddingBottom="12dp"
+                        android:text="@string/share"
+                        android:textColor="@color/colorWhite" />
 
-        </LinearLayout>
+                <TextView
+                        android:id="@+id/imageNewName"
+                        android:layout_width="@dimen/edited_image_size"
+                        android:layout_height="@dimen/edited_image_size"
+                        android:visibility="gone" />
 
-    </ScrollView>
+                <ImageView
+                        android:id="@+id/imageNew"
+                        android:layout_width="@dimen/edited_image_size"
+                        android:layout_height="@dimen/edited_image_size"
+                        android:layout_gravity="center_horizontal"
+                        android:visibility="gone"
+                        app:srcCompat="@mipmap/ic_launcher" />
+
+                <ImageView
+                        android:id="@+id/imageOriginal"
+                        android:layout_width="@dimen/edited_image_size"
+                        android:layout_height="@dimen/edited_image_size"
+                        android:layout_gravity="center_horizontal"
+                        app:srcCompat="@mipmap/ic_launcher" />
+
+                <GridView
+                        android:id="@+id/frames"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:columnWidth="110dp"
+                        android:gravity="center"
+                        android:horizontalSpacing="5dp"
+                        android:numColumns="auto_fit"
+                        android:stretchMode="spacingWidthUniform"
+                        android:verticalSpacing="20dp" />
+
+            </LinearLayout>
+
+        </ScrollView>
+
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
