--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <external-path name="bildalbum_images" path="Android/data/blog.photo.bildalbum/files/Images"/>
+    <external-path name="bildalbum_images" path="Android/data/blog.photo.bildalbum/files/Pictures"/>
 </paths>
