--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -40,7 +40,7 @@
                 android:textColor="@color/colorWhite" />
 
         <GridView
-                android:id="@+id/images"
+                android:id="@+id/girdViewImages"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:columnWidth="110dp"
