Add Take Photo functionality

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,6 +14,19 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+        <Button
+                android:id="@+id/buttonTakePicture"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="@dimen/inner_margin"
+                android:background="@color/colorPrimary"
+                android:gravity="center"
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp"
+                android:text="@string/take_picture"
+                android:textColor="@color/colorWhite" />
+
         <GridView
                 android:id="@+id/girdViewImages"
                 android:layout_width="match_parent"
