--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -57,7 +57,7 @@
                         android:background="@color/colorPrimary"
                         app:srcCompat="@mipmap/ic_launcher" />
 
-                <blog.photo.bildalbum.utils.ExpandableHeightGridView
+                <blog.photo.buildalbum.utils.ExpandableHeightGridView
                         android:id="@+id/gridViewFrames"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
