--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,7 +15,7 @@
             android:orientation="vertical">
 
         <Button
-                android:id="@+id/buttonTakePhoto"
+                android:id="@+id/buttonAddImage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -24,7 +24,7 @@
                 android:gravity="center"
                 android:paddingTop="12dp"
                 android:paddingBottom="12dp"
-                android:text="@string/take_photo"
+                android:text="@string/add_image"
                 android:textColor="@color/colorWhite" />
 
         <GridView
@@ -39,7 +39,7 @@
                 android:verticalSpacing="20dp" />
 
         <ImageView
-                android:id="@+id/imageViewImageNew"
+                android:id="@+id/imageViewImage"
                 android:layout_width="@dimen/edited_image_size"
                 android:layout_height="@dimen/edited_image_size"
                 android:layout_gravity="center_horizontal"
