--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,13 @@
 <resources>
 
-    <style name="BuildalbumTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="BuildAlbumTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="actionBarStyle">@style/BuildalbumActionBar</item>
+        <item name="actionBarStyle">@style/BuildAlbumActionBar</item>
     </style>
 
-    <style name="BuildalbumActionBar" parent="Widget.AppCompat.ActionBar.Solid">
+    <style name="BuildAlbumActionBar" parent="Widget.AppCompat.ActionBar.Solid">
         <item name="background">@color/colorPrimary</item>
         <item name="android:textColor">@color/colorWhite</item>
     </style>
