--- a/app/src/main/res/drawable-xxxhdpi/buildalbum_toast.xml
+++ b/app/src/main/res/drawable-xxxhdpi/buildalbum_toast.xml
@@ -1,13 +1,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:shape="rectangle">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:shape="rectangle">
 
-    <solid
-            android:color="@color/colorPrimary" />
+    <solid android:color="@color/colorPrimary" />
 
     <stroke
-            android:width="@dimen/inner_margin"
-            android:color="@color/colorYellow" />
+        android:width="@dimen/inner_margin"
+        android:color="@color/colorYellow" />
 
 </shape>
