Fix FAB icons on all devices

--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -66,7 +66,8 @@
         android:layout_gravity="bottom|end"
         android:layout_marginRight="@dimen/fab_margin4"
         android:layout_marginBottom="@dimen/fab_margin1"
-        android:foreground="@android:drawable/ic_menu_upload" />
+        android:scaleType="centerCrop"
+        app:srcCompat="@android:drawable/ic_menu_upload" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabShare"
@@ -75,7 +76,8 @@
         android:layout_gravity="bottom|end"
         android:layout_marginRight="@dimen/fab_margin3"
         android:layout_marginBottom="@dimen/fab_margin1"
-        android:foreground="@android:drawable/ic_menu_share" />
+        android:scaleType="centerCrop"
+        app:srcCompat="@android:drawable/ic_menu_share" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabRotate"
@@ -84,7 +86,8 @@
         android:layout_gravity="bottom|end"
         android:layout_marginRight="@dimen/fab_margin2"
         android:layout_marginBottom="@dimen/fab_margin1"
-        android:foreground="@android:drawable/ic_menu_rotate" />
+        android:scaleType="centerCrop"
+        app:srcCompat="@android:drawable/ic_menu_rotate" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabDelete"
@@ -92,6 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin1"
-        android:foreground="@android:drawable/ic_menu_delete" />
+        android:scaleType="centerCrop"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
